refactor: return camelCase json
