# apps/uno/domain/model/interaction.go
@@ -8,30 +8,30 @@ type SiteFeedback struct {
 	Email     *string   `db:"email" json:"email,omitempty"`
 	Message   string    `db:"message" json:"message"`
 	Category  string    `db:"category" json:"category"`
-	IsRead    bool      `db:"is_read" json:"is_read"`
-	CreatedAt time.Time `db:"created_at" json:"created_at"`
+	IsRead    bool      `db:"is_read" json:"isRead"`
+	CreatedAt time.Time `db:"created_at" json:"createdAt"`
 }
 
 type Reaction struct {
-	ReactToKey string    `db:"react_to_key" json:"react_to_key"`
-	EmojiID    int       `db:"emoji_id" json:"emoji_id"`
-	UserID     string    `db:"user_id" json:"user_id"`
-	CreatedAt  time.Time `db:"created_at" json:"created_at"`
+	ReactToKey string    `db:"react_to_key" json:"reactToKey"`
+	EmojiID    int       `db:"emoji_id" json:"emojiId"`
+	UserID     string    `db:"user_id" json:"userId"`
+	CreatedAt  time.Time `db:"created_at" json:"createdAt"`
 }
 
 type Comment struct {
 	ID              string    `db:"id" json:"id"`
-	PostID          string    `db:"post_id" json:"post_id"`
-	ParentCommentID *string   `db:"parent_comment_id" json:"parent_comment_id,omitempty"`
-	UserID          *string   `db:"user_id" json:"user_id,omitempty"`
+	PostID          string    `db:"post_id" json:"postId"`
+	ParentCommentID *string   `db:"parent_comment_id" json:"parentCommentId,omitempty"`
+	UserID          *string   `db:"user_id" json:"userId,omitempty"`
 	Content         string    `db:"content" json:"content"`
-	CreatedAt       time.Time `db:"created_at" json:"created_at"`
-	UpdatedAt       time.Time `db:"updated_at" json:"updated_at"`
+	CreatedAt       time.Time `db:"created_at" json:"createdAt"`
+	UpdatedAt       time.Time `db:"updated_at" json:"updatedAt"`
 }
 
 type CommentsReaction struct {
-	CommentID string    `db:"comment_id" json:"comment_id"`
-	UserID    string    `db:"user_id" json:"user_id"`
+	CommentID string    `db:"comment_id" json:"commentId"`
+	UserID    string    `db:"user_id" json:"userId"`
 	Type      string    `db:"type" json:"type"`
-	CreatedAt time.Time `db:"created_at" json:"created_at"`
+	CreatedAt time.Time `db:"created_at" json:"createdAt"`
 }
