# apps/uno/domain/model/shopping_list.go
@@ -4,13 +4,13 @@ import "time"
 
 type ShoppingListItem struct {
 	ID        string    `db:"id" json:"id"`
-	UserID    string    `db:"user_id" json:"user_id"`
+	UserID    string    `db:"user_id" json:"userId"`
 	Name      string    `db:"name" json:"name"`
-	CreatedAt time.Time `db:"created_at" json:"created_at"`
+	CreatedAt time.Time `db:"created_at" json:"createdAt"`
 }
 
 type UsersToShoppingListItems struct {
-	UserID    string    `db:"user_id" json:"user_id"`
-	ItemID    string    `db:"item_id" json:"item_id"`
-	CreatedAt time.Time `db:"created_at" json:"created_at"`
+	UserID    string    `db:"user_id" json:"userId"`
+	ItemID    string    `db:"item_id" json:"itemId"`
+	CreatedAt time.Time `db:"created_at" json:"createdAt"`
 }
